src/test/deca/context/valid/created/instanceof_class/null.deca
// Description:
//		Test instanceof sur null
// Resultats:
//		OK

class A{}

{
    null instanceof A;
}