src/test/deca/context/invalid/created/instanceof_same_type/VOID.deca
// Description:
//		instanceof sur deux types egaux primitif
// Resultats:
// 		Erreur contexte : Ligne 7 : identifier not defined

{
	void instanceof void;
}
